# duplex

./: .gitignore  Cargo.toml  Makefile  README.md  clippy.toml  rustfmt.toml
.kiro/specs/duplicate-file-analyzer/: design.md  requirements.md  tasks.md
proptest-regressions/: concurrent.txt  discovery.txt  models.txt  resume.txt
src/: analysis.rs  concurrent.rs  discovery.rs  duplicate.rs  hash.rs  lib.rs  memory.rs  models.rs  progress.rs  report.rs  resume.rs
src/web/: api.rs  handlers.rs  mod.rs  websocket.rs
test_web_demo/: document2.txt  dup1.txt  unique.txt
test_web_demo/subfolder/: another.txt
tests/: integration_tests.rs
web/static/: app.js  index.html  styles.css
