[package]
name = "duplicate-file-analyzer"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A high-performance tool for identifying duplicate files across large directory structures"
license = "MIT"
repository = "https://github.com/yourusername/duplicate-file-analyzer"

[[bin]]
name = "duplicate-analyzer"
path = "src/bin/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Hashing
sha2 = "0.10"
md5 = "0.7"

# File system operations
walkdir = "2.0"
glob = "0.3"

# Web server
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }

# HTTP client for testing
reqwest = { version = "0.11", features = ["json"] }

# Command line parsing
clap = { version = "4.0", features = ["derive"] }

# WebSocket support
tokio-tungstenite = "0.20"

# Progress tracking
indicatif = "0.17"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# System information
num_cpus = "1.0"
dirs = "5.0"

[dev-dependencies]
# Property-based testing
proptest = "1.0"

# Testing utilities
tempfile = "3.0"
assert_fs = "1.0"

# Async testing
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true